--- a/frontend/src/assets/css/correo/correo.css
+++ b/frontend/src/assets/css/correo/correo.css
@@ -9,6 +9,13 @@
   margin-right: 20px;
 }
 
+.correoView > .box:first-child {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 1rem;
+}
+
 .correoView .editorMain {
   padding: 0 1rem;
 }
