--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -16,19 +16,21 @@
 
   --third-blue: #2196f3;
 
-  --glass-red: rgba(229, 0, 0, 0.2);
   --glass-purple: rgba(94, 53, 177, 0.12);
+  --glass-purple-2: rgba(94, 53, 177, 0.3);
   --glass-blue: rgb(2, 96, 173, 0.1);
+  --glass-blue-2: rgb(2, 96, 173, 0.25);
   --glass-green: rgba(0, 167, 83, 0.15);
   --glass-orange: rgba(255, 132, 0, 0.15);
+  --glass-orange-2: rgba(255, 132, 0, 0.3);
 
   --text-light: #e2e6ec;
   --text-gray: #767c8b;
   --text-blue: #2196f3;
 
   --background-blue: #e3f2fd;
+  --border-blue: rgba(156, 210, 255, 0.55);
 
-  --red-100: #ff6666;
   --red-200: #ff4c4c;
   --red-300: #ff3232;
   --red-400: #ff1919;
@@ -67,8 +69,8 @@
 
 /* SCROLL BAR */
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
+  width: 9px;
+  height: 10px;
 }
 ::-webkit-scrollbar-thumb {
   background: #b3afb3;
@@ -105,11 +107,12 @@ main.fullWindow {
 
 .viewContainer {
   background-color: var(--background-blue);
-  padding-top: 20px;
-  padding-left: 20px;
+  padding-top: 15px;
+  padding-left: 15px;
   overflow: hidden;
   border-radius: var(--border-radius);
   min-height: 100%;
+  position: relative;
 }
 
 .box section {
@@ -143,15 +146,19 @@ select {
 
 /* BOXES */
 .box {
-  background: #fff;
   border-radius: var(--border-radius);
   padding: 1rem;
-  border: 1px solid rgba(156, 210, 255, 0.46);
-  margin-bottom: 20px;
+  border: 1px solid var(--border-blue);
+  margin-bottom: 15px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(2px);
 }
 
 .box h1,
-.box h2 {
+.box h2,
+.dragBox h2 {
   margin-bottom: 0;
   font-size: 18px;
 }
@@ -190,4 +197,16 @@ select {
   margin-bottom: 0;
   font-size: 14px;
   color: var(--text-gray);
+}
+
+/* DECORATION */
+.viewContainer::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: var(--main-blue);
+  clip-path: polygon(40% 0, 100% 0, 100% 100%, 70% 100%);
 }
