--- a/frontend/src/assets/css/common/tables.css
+++ b/frontend/src/assets/css/common/tables.css
@@ -105,8 +105,10 @@ body
   height: calc(100vh - var(--topbar-height) - 10px - 1rem);
   width: 100%;
   background-color: var(--background-blue);
-  padding: 20px;
+  padding: 15px;
   border-radius: var(--border-radius);
+  overflow: hidden;
+  position: relative;
 }
 
 .mainTableBox1 .mainTableBox2 {
@@ -124,7 +126,7 @@ body
   border: none;
   background: #fff;
   border-radius: 0 0 var(--border-radius) var(--border-radius);
-  border: 1px solid rgba(156, 210, 255, 0.46);
+  border: 1px solid var(--border-blue);
   border-top: none;
   padding: 0 calc(1rem - 5px);
 }
@@ -141,7 +143,7 @@ body
   padding: 1rem;
   padding-bottom: 0.3rem;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
-  border: 1px solid rgba(156, 210, 255, 0.46);
+  border: 1px solid var(--border-blue);
   border-bottom: none;
 }
 
@@ -168,4 +170,31 @@ body
 }
 .mainTableBox1 .mainTableBox3 button:hover .crudIcon.deleteIcon {
   color: var(--red-300);
+}
+
+/* DECORATION */
+.mainTableBox1::before {
+  content: "";
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  top: -50%;
+  left: -150%;
+  border-radius: 50%;
+  background-color: var(--main-blue);
+  animation-name: horizontalMove;
+  animation-duration: 350s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes horizontalMove {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translate(20%);
+  }
+  100% {
+    transform: translate(0);
+  }
 }
