--- a/frontend/src/assets/css/navigation/sidebar.css
+++ b/frontend/src/assets/css/navigation/sidebar.css
@@ -7,7 +7,7 @@
   width: var(--sidebar-width);
   height: calc(100vh - var(--topbar-height) - 10px);
   position: sticky;
-  top: var(--topbar-height);
+  top: calc(var(--topbar-height) + 10px);
   z-index: 998;
   overflow: auto;
 }
