--- a/frontend/src/assets/css/navigation/sidebar.css
+++ b/frontend/src/assets/css/navigation/sidebar.css
@@ -53,9 +53,15 @@
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   border-radius: var(--border-radius);
+  -webkit-transition: all var(--transition-time) ease;
+  -o-transition: all var(--transition-time) ease;
   transition: all var(--transition-time) ease;
   text-decoration: none;
   margin: 8px 0;
@@ -82,9 +88,15 @@
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   border-radius: var(--border-radius);
+  -webkit-transition: all var(--transition-time) ease;
+  -o-transition: all var(--transition-time) ease;
   transition: all var(--transition-time) ease;
   text-decoration: none;
   margin: 8px 0;
