--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -85,11 +85,14 @@
 
 /* MAIN STYLES */
 *:not(.editorMain span) {
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Roboto", sans-serif;
+  -webkit-box-sizing: border-box !important;
   box-sizing: border-box !important;
 }
 
 .mainContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -151,8 +154,8 @@ select {
   border: 1px solid var(--border-blue);
   margin-bottom: 15px;
   position: relative;
-  background-color: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(4px);
+  background-color: rgba(255, 255, 255, 0.96);
+  backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
 }
 
@@ -168,7 +171,11 @@ select {
 }
 
 .tittleIconBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -208,5 +215,20 @@ select {
   left: 0;
   top: 0;
   background-color: var(--main-blue);
+  -webkit-clip-path: polygon(40% 0, 100% 0, 100% 100%, 70% 100%);
   clip-path: polygon(40% 0, 100% 0, 100% 100%, 70% 100%);
+}
+
+/* PROGRESS CIRCLE */
+.progressPercent {
+  font-size: 0.75rem;
+}
+.progressPercent.success {
+  color: #43a047;
+}
+.progressPercent.primary {
+  color: #1976d2;
+}
+.progressPercent.error {
+  color: #d32f2f;
 }
