--- a/frontend/src/assets/css/admin/prospectos.css
+++ b/frontend/src/assets/css/admin/prospectos.css
@@ -5,6 +5,7 @@
 }
 
 .viewContainer .uploadBox {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1rem 2rem;
@@ -15,11 +16,18 @@
 }
 
 .viewContainer .uploadBox .archivoBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .viewContainer .uploadBox .archivoBox .archivoInfo {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 
@@ -65,6 +73,7 @@
 }
 
 .viewContainer .dragBox .dragListsBox {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15px, 1fr));
   gap: 1rem 0;
@@ -79,6 +88,7 @@
 .viewContainer .dragBox .dragList h2 {
   margin-bottom: 1rem;
   text-align: center;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -94,6 +104,7 @@
   padding: 0.5rem 1rem;
   border: 2px solid #2196f3;
   margin-bottom: 1rem;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -110,8 +121,14 @@
 }
 
 .viewContainer .dragBox .btnBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
   margin-top: 1rem;
 }
