--- a/frontend/src/assets/css/common/cardContactos.css
+++ b/frontend/src/assets/css/common/cardContactos.css
@@ -1,5 +1,7 @@
 .contactoCardGrid {
+  display: -ms-grid;
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, -webkit-max-content));
   grid-template-columns: repeat(auto-fit, minmax(260px, max-content));
   gap: 1rem;
 }
@@ -8,6 +10,8 @@
   border: 1px solid transparent;
   padding: 0.8rem;
   border-radius: var(--border-radius);
+  -webkit-transition: all var(--transition-time) ease;
+  -o-transition: all var(--transition-time) ease;
   transition: all var(--transition-time) ease;
 }
 
