--- a/frontend/src/assets/css/common/tables.css
+++ b/frontend/src/assets/css/common/tables.css
@@ -1,106 +1,3 @@
-table td,
-table th {
-  max-width: 285px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-table tbody tr:last-child th,
-table tbody tr:last-child td {
-  border-bottom: none;
-}
-
-.tableContainer {
-  overflow: auto;
-  height: calc(100vh - 126px - 1rem - var(--topbar-height));
-  border-bottom: 1px solid var(--gray-100);
-}
-
-thead th {
-  font-weight: bold !important;
-  position: sticky;
-  top: 0;
-  z-index: 998;
-  background: #fff;
-}
-
-.mainTableBox {
-  max-height: calc(100vh - 50px - 1rem);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: var(--box-shadow);
-}
-
-.mainTableBox .tableTitle {
-  position: sticky;
-  font-size: 18px;
-  top: 0;
-  z-index: 2;
-  margin: 0;
-}
-
-.mainTableBox .tablePagination {
-  position: sticky;
-  bottom: 0;
-  z-index: 2;
-}
-
-tbody a {
-  text-decoration: none;
-  color: var(--main-blue);
-}
-tbody a:hover {
-  text-decoration: underline;
-  color: var(--main-blue);
-}
-
-.mainTableBox .redIconBtn {
-  margin-right: 1rem;
-}
-
-.mainTableBox .cellIcons {
-  padding: 0 !important;
-  padding-right: 0.5rem !important;
-  text-align: end;
-}
-.mainTableBox .cellIcons button {
-  border: none;
-  background: none;
-  cursor: pointer;
-  margin-left: 0.3rem;
-}
-.mainTableBox .cellIcons button:first-child {
-  margin-left: 0;
-}
-
-.mainTableBox .cellIcons button .crudIcon {
-  color: var(--gray-200);
-  transition: all var(--transition-time) ease;
-}
-.mainTableBox .cellIcons button:hover .crudIcon.editIcon {
-  color: var(--main-orange);
-}
-.mainTableBox .cellIcons button:hover .crudIcon.deleteIcon {
-  color: var(--red-300);
-}
-
-.paginationBox {
-  position: relative;
-}
-
-/* -------------------------------------------- */
-body
-  div:last-child[role="tooltip"]
-  > div
-  > div:nth-child(2)
-  > div:nth-child(2)
-  > div
-  > div:first-child
-  > label {
-  display: none;
-}
-
 .mainTableBox1 {
   height: calc(100vh - var(--topbar-height) - 10px - 1rem);
   width: 100%;
@@ -112,23 +9,17 @@ body
 }
 
 .mainTableBox1 .mainTableBox2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   height: 100%;
   position: relative;
-}
-
-.mainTableBox1 .mainTableBox3 {
-  flex-grow: 1;
-}
-
-.mainTableBox1 .mainTableBox3 > div {
-  border: none;
-  background: #fff;
-  border-radius: 0 0 var(--border-radius) var(--border-radius);
-  border: 1px solid var(--border-blue);
-  border-top: none;
-  padding: 0 calc(1rem - 5px);
+  border-radius: var(--border-radius);
+  overflow: hidden;
 }
 
 .mainTableBox1 .mainTableBox3 > div > div:last-child > div > div:first-child {
@@ -141,7 +32,6 @@ body
   margin: 0;
   background: #fff;
   padding: 1rem;
-  padding-bottom: 0.3rem;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   border: 1px solid var(--border-blue);
   border-bottom: none;
@@ -150,51 +40,76 @@ body
 .mainTableBox1 .tablefooterBtn {
   z-index: 3;
   position: absolute;
-  left: 0rem;
-  bottom: 11px;
+  right: 1rem;
+  top: 11px;
 }
 
-.mainTableBox1 .mainTableBox3 button {
-  border: none;
-  background: none;
-}
-
-.mainTableBox1 .mainTableBox3 .crudIcon {
+.mainTableBox1 .crudIcon {
   color: var(--gray-200);
+  -webkit-transition: all var(--transition-time) ease;
+  -o-transition: all var(--transition-time) ease;
   transition: all var(--transition-time) ease;
   border: none;
   background: none;
 }
-.mainTableBox1 .mainTableBox3 button:hover .crudIcon.editIcon {
+.mainTableBox1 button:hover .crudIcon.editIcon {
   color: var(--main-orange);
 }
-.mainTableBox1 .mainTableBox3 button:hover .crudIcon.deleteIcon {
+.mainTableBox1 button:hover .crudIcon.deleteIcon {
   color: var(--red-300);
+}
+
+/* TABLE CLASSES */
+.mainTableBox1 .ag-root-wrapper {
+  border-right: 1px solid var(--border-blue) !important;
+  border-left: 1px solid var(--border-blue) !important;
+  border-bottom: 1px solid var(--border-blue) !important;
 }
 
 /* DECORATION */
 .mainTableBox1::before {
   content: "";
   width: 200%;
-  height: 200%;
+  height: 250%;
   position: absolute;
-  top: -50%;
+  top: -75%;
   left: -150%;
   border-radius: 50%;
   background-color: var(--main-blue);
+  -webkit-animation-name: horizontalMove;
   animation-name: horizontalMove;
+  -webkit-animation-duration: 350s;
   animation-duration: 350s;
+  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes horizontalMove {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  50% {
+    -webkit-transform: translate(20%);
+    transform: translate(20%);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
 }
 
 @keyframes horizontalMove {
   0% {
+    -webkit-transform: translate(0);
     transform: translate(0);
   }
   50% {
+    -webkit-transform: translate(20%);
     transform: translate(20%);
   }
   100% {
+    -webkit-transform: translate(0);
     transform: translate(0);
   }
 }
