--- a/frontend/src/assets/css/correo/correo.css
+++ b/frontend/src/assets/css/correo/correo.css
@@ -1,7 +1,12 @@
 .correoView,
 .correoView .emailSection,
 .correoView form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -10,8 +15,14 @@
 }
 
 .correoView > .box:first-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 0.7rem 1rem;
 }
@@ -31,6 +42,8 @@
 .correoView .emailSection,
 .correoView form,
 .correoView .editorBox {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
 }
 
