--- a/frontend/src/assets/css/home/login.css
+++ b/frontend/src/assets/css/home/login.css
@@ -2,8 +2,14 @@
 #loginContainer {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -26,8 +32,14 @@
 /* Inputs and icons */
 #loginContainer .mainIconBox,
 #loginContainer .mainIconBox > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -66,6 +78,8 @@
 #loginContainer .rightIcon {
   position: absolute;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
