--- a/frontend/src/assets/css/navigation/sidebar.css
+++ b/frontend/src/assets/css/navigation/sidebar.css
@@ -12,6 +12,10 @@
   overflow: auto;
 }
 
+#sidebar.hide {
+  width: 0;
+}
+
 #sidebar .menuSection {
   margin: 1rem;
   border-bottom: 1px solid var(--text-light);
