--- a/frontend/src/assets/css/common/tables.css
+++ b/frontend/src/assets/css/common/tables.css
@@ -22,19 +22,32 @@
   overflow: hidden;
 }
 
+.mainTableBox1 .mainTableBox2 .gray {
+  font-size: 12px;
+}
+
 .mainTableBox1 .mainTableBox3 > div > div:last-child > div > div:first-child {
   color: #fff;
 }
 
-.mainTableBox1 .tableTitle {
-  font-size: 20px;
-  z-index: 2;
-  margin: 0;
+.mainTableBox1 .titleTableBox {
+  display: flex;
+  align-items: center;
   background: #fff;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   border: 1px solid var(--border-blue);
   border-bottom: none;
+}
+
+.mainTableBox1 .titleTableBox button {
+  padding-bottom: 8px !important;
+}
+
+.mainTableBox1 .tableTitle {
+  font-size: 20px;
+  margin: 0;
+  margin-right: 8px;
 }
 
 .mainTableBox1 .tablefooterBtn {
@@ -82,6 +95,16 @@
   animation-duration: 350s;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+}
+
+.spinnerBox {
+  font-size: 10px;
+  padding: 8px 9.5px;
+}
+
+.spinnerBox > div {
+  width: 21px;
+  height: 21px;
 }
 
 @-webkit-keyframes horizontalMove {
