--- a/frontend/src/assets/css/navigation/topbar.css
+++ b/frontend/src/assets/css/navigation/topbar.css
@@ -1,15 +1,14 @@
 #topbar {
   height: var(--topbar-height);
-  padding: 0 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   position: sticky;
   top: 0;
   z-index: 998;
@@ -17,11 +16,17 @@
   margin-bottom: 10px;
 }
 
+#topbar .topLeft {
+  display: flex;
+  width: var(--sidebar-width);
+}
+
 #topbar p {
   font-size: 1.5rem;
   font-weight: bold;
   color: var(--main-dark);
   margin-bottom: 0;
+  margin-left: 1rem;
 }
 
 #topbar .iconBox {
@@ -29,11 +34,12 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-right: 1rem;
 }
 
-#topbar .iconBox .iconBtn {
+#topbar .iconBtn {
   margin-left: 15px;
   width: 40px;
   height: 40px;
@@ -42,11 +48,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   border: none;
   border-radius: var(--border-radius) !important;
   -webkit-transition: all 0.2s ease;
@@ -54,31 +60,31 @@
   transition: all 0.2s ease;
 }
 
-#topbar .iconBox .iconBtn:hover {
+#topbar .iconBtn:hover {
   -webkit-box-shadow: 1px 1px 4px 1px rgb(0, 0, 0, 0.1);
-          box-shadow: 1px 1px 4px 1px rgb(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 4px 1px rgb(0, 0, 0, 0.1);
 }
 
-#topbar .iconBox .iconBtn.profile {
+#topbar .iconBtn.profile {
   color: var(--main-blue);
   background-color: var(--glass-blue);
 }
-#topbar .iconBox .iconBtn.profile:hover {
+#topbar .iconBtn.profile:hover {
   background-color: var(--glass-blue-2);
 }
 
-#topbar .iconBox .iconBtn.settings {
+#topbar .iconBtn.settings {
   color: var(--main-orange);
   background-color: var(--glass-orange);
 }
-#topbar .iconBox .iconBtn.settings:hover {
+#topbar .iconBtn.settings:hover {
   background-color: var(--glass-orange-2);
 }
 
-#topbar .iconBox .iconBtn.notifications {
+#topbar .iconBtn.notifications {
   color: var(--main-purple);
   background-color: var(--glass-purple);
 }
-#topbar .iconBox .iconBtn.notifications:hover {
+#topbar .iconBtn.notifications:hover {
   background-color: var(--glass-purple-2);
 }
