adelantos en backend, paso de informacion, modales, etc

--- a/frontend/src/assets/scss/App.scss
+++ b/frontend/src/assets/scss/App.scss
@@ -13,3 +13,5 @@
 @use "./components/excel";
 @use "./components/tables";
 @use "./components/detailed-view";
+@use "./components/card-contacto";
+@use "./components/email-file";
